--- a/auctions/static/auctions/shoppingcart.css
+++ b/auctions/static/auctions/shoppingcart.css
@@ -1,7 +1,7 @@
 
 .shopping-cart {
     width: 750px;
-    height: 423px;
+    height: fit-content;
     margin: 80px auto;
     background: #FFFFFF;
     box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.10);
