--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -191,5 +191,112 @@
   {% endfor %}
 </div>
 </div>
+  {% endif %}
+
+
+  {% if user.is_authenticated == 0 and listing.active %}
+<div id="container">
+  <div class="row">
+    <div class="column">
+          <img class="column_card" src="{{ listing.image.url }}" alt="Card image cap" ><br>
+    </div>
+
+    <div class="column" style="width: 50%;">
+      <div class="column_card" >
+        <div class="row1">
+            <div class="card-body" > 
+              <h4 style="padding-bottom: 20px;font-size: x-large;" class="card-title"> {{ listing.title }}</h4>
+              <div class="card-text">Seller: <strong> {{ listing.seller }}</strong> </div>
+              {% if listing.Winner !=  None %}
+                  <div class="card-text">Highest bid:<strong>  ${{ listing.highest_bid }}</strong></div> 
+              {% elif listing.Winner ==  None %}
+                  <div class="card-text">Highest bid:<strong>  ${{ listing.starting_bid }}</strong></div> 
+              {% endif %}
+
+        </div>
+        </div>
+
+        <div class="row2" >
+          <div class="card-body" > 
+          <form action="{% url 'login' %}" class="column" style="margin-right: 60px;">
+            {% csrf_token %}
+            <div style="color: rgba(10, 10, 10, 0.692);"> <h4 > Place a Bid </h4> </div>
+            {% if listing.Winner !=  None %}
+            <span  style="color: rgba(75, 84, 94, 0.74);font-size: 12px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> 
+              bid must be greater than the highest bid ${{ listing.highest_bid }}
+            </span> 
+            <div style="padding: 12px 0 10px 0;" >
+              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ listing.highest_bid }}"  placeholder="{{ listing.highest_bid }}" step="0.01" oninput="setTwoNumberDecimal">
+              
+            </div> 
+            {% elif listing.Winner ==  None %}
+            <span  style="color: rgba(75, 84, 94, 0.74);font-size: 12px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> 
+              bid must be greater than the highest bid ${{ listing.starting_bid }}
+            </span>
+            <div style="padding: 12px 0 10px 0;" >
+              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ listing.starting_bid }}"  placeholder="{{ listing.starting_bid }}" step="0.01" oninput="setTwoNumberDecimal">
+           </div>
+            {% endif %}
+          
+            <div >  
+              <input class="btn btn-primary btn-sm" type="submit" value="Place Bid">
+              <a href="{% url 'login' %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Watchlist</a>
+            </div>
+        </form> 
+        <form action="{% url 'login' %}" method="POST" class="column">
+            {% csrf_token %}
+            <div  style="color: rgba(10, 10, 10, 0.692);"> <h4 >Or Buy it for </h4></div>
+            <div>Price:<strong> ${{listing.desired_price}}</strong></div> 
+            <div style="color: rgb(75, 84, 94);font-size: x-small;padding-left: 40px;">+ $10 shipping fees</strong></div> 
+            <div style="padding: 50px 0 10px 0;">  
+              <a href="{% url 'login' %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Cart</a>
+            </div>
+        </form> 
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <div class="row">
+      <div class="listing_card" >
+        <h4 > {{ listing.title }}</h4>
+        <p >{{listing.description }}</p>
+
+        <p  style="font-size: smaller;"> Created {{ listing.created_at }}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="listing_card">
+      <form action="{% url 'add_comment' listing.id %}" method="POST">
+          {% csrf_token %}
+          <div> Write a comment</div>
+          <div >
+            <textarea name="comment" rows="5" cols="100">  </textarea>
+          </div>
+            <input class="btn btn-primary" type="submit" value="Comment">
+      </form>
+    </div>
+</div>
+<hr style="background-color: rgb(156, 156, 156, 0.4); margin: 20px 25px 0px 25px;">
+
+<div class="row">
+  <h2> Recent Comments</h2>
+  <div>
+    {% for comment in comment_list %}
+  <div class="card card_comment" style="padding: 0;">
+      <div class="card-header">
+           Comment by: {{ comment.commenter }}
+      </div>
+   <div class="card-body">
+       <blockquote class="blockquote mb-0">
+           <p>{{ comment }}</p>
+           <footer class="blockquote-footer"><cite title="Source Title">{{ comment.date }}</cite></footer>
+       </blockquote>
+   </div>
+  </div>
+  {% endfor %}
+</div>
+</div>
 {% endif %}
 {% endblock %}
