--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -24,7 +24,7 @@
 
               <p class="card-text"> <strong>Starting Bid:</strong> ${{ listing.starting_bid }}</p>
               <p class="card-text"> <strong>Current highest bid:</strong> ${{ listing.highest_bid }}</p>
-              <p class="card-text"> <strong>Bidder:</strong> <code>@{{ listing.winner }}</code></p>
+              <p class="card-text"> <strong>Bidder:</strong> <code>@{{ listing.Winner }}</code></p>
 
           <div >
               <a href="{% url 'close_auction' listing.id %}" type="submit" role="button" class="btn btn-primary">Close Auction</a>
@@ -64,21 +64,21 @@
 
 {% elif user.is_authenticated and listing.active == 0 %}
 <div class="listing_footer">
-    {% if user == listing.winner %}
+    {% if user == listing.Winner %}
         <div class="alert alert-success" style="text-align: center" role="alert">
             Auction closed. You win!
         </div>
-    {% elif user == listing.seller and listing.winner == None %}
+    {% elif user == listing.seller and listing.Winner == None %}
         <div class="alert alert-success" style="text-align: center" role="alert">
-          <p  class="alert-heading">Auction closed with no winner!</p>
+          <p  class="alert-heading">Auction closed with no Winner!</p>
             <div>
               <a href="{% url 'reopen_auction' listing.id %}" type="submit" role="button" class="btn btn-primary btn-sm">Reopen Auction</a>
             </div>
         </div>
-    {% elif user == listing.seller and listing.winner != None %}
+    {% elif user == listing.seller and listing.Winner != None %}
     <div class="alert alert-success" style="text-align: center;" role="alert">
       <h4 class="alert-heading">Auction Closed!</h4>
-      <p class="mb-0">Winner is : @{{listing.winner}}</p>
+      <p class="mb-0">Winner is : @{{listing.Winner}}</p>
       <p class="mb-0">Price is : ${{listing.highest_bid}}</p>
 
   </div>
@@ -100,9 +100,9 @@
             <div class="card-body" > 
               <h4 style="padding-bottom: 20px;font-size: x-large;" class="card-title"> {{ listing.title }}</h4>
               <div class="card-text">Seller: <strong> {{ listing.seller }}</strong> </div>
-              {% if listing.winner !=  None %}
+              {% if listing.Winner !=  None %}
                   <div class="card-text">Highest bid:<strong>  ${{ listing.highest_bid }}</strong></div> 
-              {% elif listing.winner ==  None %}
+              {% elif listing.Winner ==  None %}
                   <div class="card-text">Highest bid:<strong>  ${{ listing.starting_bid }}</strong></div> 
               {% endif %}
 
@@ -114,14 +114,14 @@
           <form action="{% url 'make_bid' listing.id %}" method="POST" class="column" style="margin-right: 60px;">
             {% csrf_token %}
             <div style="color: rgba(10, 10, 10, 0.692);"> <h4 > Place a Bid </h4> </div>
-            {% if listing.winner !=  None %}
+            {% if listing.Winner !=  None %}
             <span  style="color: rgba(75, 84, 94, 0.74);font-size: 12px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> 
               bid must be greater than the highest bid ${{ listing.highest_bid }}
             </span> 
             <div style="padding: 12px 0 10px 0;" >
               <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ listing.highest_bid }}"  placeholder="{{ listing.highest_bid }}" step="0.01" oninput="setTwoNumberDecimal">              
             </div> 
-            {% elif listing.winner ==  None %}
+            {% elif listing.Winner ==  None %}
             <span  style="color: rgba(75, 84, 94, 0.74);font-size: 12px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> 
               bid must be greater than the highest bid ${{ listing.starting_bid }}
             </span>
@@ -134,6 +134,7 @@
               <a href="{% url 'add_to_wishlist' listing.id %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Watchlist</a>
             </div>
         </form> 
+        {% if listing.highest_bid <= listing.desired_price  %}
         <form action="{% url 'cart_add' listing.id %}" method="POST" class="column">
             {% csrf_token %}
             <div  style="color: rgba(10, 10, 10, 0.692);"> <h4 >Or Buy it for </h4></div>
@@ -143,6 +144,8 @@
               <a href="{% url 'cart_add' listing.id %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Cart</a>
             </div>
         </form> 
+        {% endif %}
+
         </div>
       </div>
     </div>
@@ -215,41 +218,16 @@
         </div>
 
         <div class="row2" >
-          <div class="card-body" > 
-          <form action="{% url 'login' %}" class="column" style="margin-right: 60px;">
-            {% csrf_token %}
-            <div style="color: rgba(10, 10, 10, 0.692);"> <h4 > Place a Bid </h4> </div>
-            {% if listing.Winner !=  None %}
-            <span  style="color: rgba(75, 84, 94, 0.74);font-size: 12px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> 
-              bid must be greater than the highest bid ${{ listing.highest_bid }}
-            </span> 
-            <div style="padding: 12px 0 10px 0;" >
-              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ listing.highest_bid }}"  placeholder="{{ listing.highest_bid }}" step="0.01" oninput="setTwoNumberDecimal">
-              
-            </div> 
-            {% elif listing.Winner ==  None %}
-            <span  style="color: rgba(75, 84, 94, 0.74);font-size: 12px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> 
-              bid must be greater than the highest bid ${{ listing.starting_bid }}
-            </span>
-            <div style="padding: 12px 0 10px 0;" >
-              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ listing.starting_bid }}"  placeholder="{{ listing.starting_bid }}" step="0.01" oninput="setTwoNumberDecimal">
-           </div>
-            {% endif %}
-          
-            <div >  
-              <input class="btn btn-primary btn-sm" type="submit" value="Place Bid">
-              <a href="{% url 'login' %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Watchlist</a>
-            </div>
-        </form> 
-        <form action="{% url 'login' %}" method="POST" class="column">
-            {% csrf_token %}
-            <div  style="color: rgba(10, 10, 10, 0.692);"> <h4 >Or Buy it for </h4></div>
-            <div>Price:<strong> ${{listing.desired_price}}</strong></div> 
-            <div style="color: rgb(75, 84, 94);font-size: x-small;padding-left: 40px;">+ $10 shipping fees</strong></div> 
-            <div style="padding: 50px 0 10px 0;">  
-              <a href="{% url 'login' %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Cart</a>
-            </div>
-        </form> 
+          <div class="card-body"  > 
+            <form action="{% url 'login' %}" method="POST" class="column" style="width: 100%;">
+              {% csrf_token %}
+              <div  style="color: rgba(10, 10, 10, 0.822);"> <h3> To buy or make a bid </h3></div>
+              <div  style="color: rgba(10, 10, 10, 0.692);"> <h4 >Please Login </h4></div>
+              <div style="padding-top: 20px;">  
+                <a href="{% url 'login' %}" type="submit" role="button" class="btn btn-primary btn">Login</a>
+              </div>
+          </form>
+
         </div>
       </div>
     </div>
