--- a/auctions/templates/auctions/watchlist_list.html
+++ b/auctions/templates/auctions/watchlist_list.html
@@ -5,6 +5,11 @@
 
 {% if user.is_authenticated %}
 
+{% if message %}
+{{message}}
+{% endif %}
+
+
 <div style="padding: 40px 0 20px 0;">
     <div style="text-align: center;">
         <h2>Your WatchList</h2>
