--- a/auctions/templates/auctions/cart_detail.html
+++ b/auctions/templates/auctions/cart_detail.html
@@ -20,7 +20,7 @@
       </div>
    
       <div class="image" id="column2">
-        <img src="{{listing.image.url}}" alt="" style="width: 100px; height: 100px; margin: 0;"/>
+        <img src="{{listing.image}}" alt="" style="width: 100px; height: 100px; margin: 0;"/>
       </div>
    
       <div class="description" id="column3">
