--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -14,7 +14,7 @@
     <div class="row no-gutters" style="padding: 0; max-height: 250px;">
         <div class="col-md-4 card_img">
             <a class="card_listing" href="{% url 'listingpage' listing.id %}">
-                <img class="ls_foto" src="{{ listing.image.url}}" alt="" style="width: 100%; height: 100%;">
+                <img class="ls_foto" src="{{ listing.image}}" alt="" style="width: 100%; height: 100%;">
             </a>
         </div>
         <div class="col-md-8">
