--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -13,7 +13,7 @@
 <div id="container">
   <div class="row">
     <div class="column">
-          <img class="column_card" src="{{ listing.image.url }}" alt="Card image cap" ><br>
+          <img class="column_card" src="{{ listing.image }}" alt="Card image cap" ><br>
     </div>
     <div class="column" style="width: 60%;">
       <div class="card">
@@ -96,7 +96,7 @@
 <div id="container">
   <div class="row" style="padding-left: 80px;">
     <div class="column">
-          <img class="column_card" src="{{ listing.image.url }}" alt="Card image cap" ><br>
+          <img class="column_card" src="{{ listing.image }}" alt="Card image cap" ><br>
     </div>
 
     <div class="column" style="width: 50%;">
@@ -204,7 +204,7 @@
 <div id="container">
   <div class="row">
     <div class="column">
-          <img class="column_card" src="{{ listing.image.url }}" alt="Card image cap" ><br>
+          <img class="column_card" src="{{ listing.image }}" alt="Card image cap" ><br>
     </div>
 
     <div class="column" style="width: 50%;">
