--- a/auctions/templates/auctions/watchlist_list.html
+++ b/auctions/templates/auctions/watchlist_list.html
@@ -5,38 +5,29 @@
 
 {% if user.is_authenticated %}
 
-{% if message %}
-<row>
-    <h3 style="margin: 20px;">{{message}}</h3
-</row>
-{% endif %}
-
-
 <div style="padding: 40px 0 20px 0;">
     <div style="text-align: center;">
         <h2>Your WatchList</h2>
     </div>
-    <section class="row" style="margin-left: 20px;">
-    {% for Listing in object_list%}
+    <section class="row" style="margin-left: 5px; justify-content: center;">
+        {% for Listing in object_list %}
             <article class="watchlist_card">
                 <a href="{% url 'listingpage' Listing.pk %}">
-                     <img class="card-img-top" src="{{ Listing.image.url  }}" alt="Card image cap">
+                     <img class="card-img-top" src="{{ Listing.image  }}" alt="Card image cap">
                 </a>
                 <div class="card-body" style="padding: 15px;">
                   <p class="card-title"><strong> {{ Listing.title }} </strong></p>
-                  <p class="card-subtitle mb-2 "  style="font-size: small;"> Current Price:<strong> ${{ Listing.starting_bid }}</strong></p>
+                  <p class="card-subtitle mb-2 "  style="font-size: small;"> Current Price:</strong> {{ Listing.starting_bid }}$</p>
                   <p class="card-subtitle mb-2 text-muted" style="font-size: smaller;"> Created {{ Listing.created_at }}</p>
                 </div>
             </article>
+            {% empty %}
+    <h4>is empty!</h4>
+    
     </section>    
 </div>  
    
+
 {% endfor %}
 
-{% else %}
-    <div class="alert alert-danger" role="alert">
-        Not signed in.
-    </div>
-{% endif %}
-        
 {% endblock %}
