--- a/auctions/templates/auctions/errors.html
+++ b/auctions/templates/auctions/errors.html
@@ -5,5 +5,10 @@
 {% endblock %}
 
 {% block body %}
-  {{message}}
+<div class="listing_footer">
+
+  <div class="alert alert-secondary" style="text-align: center" role="alert">
+    {{message}}
+  </div>
+</div>
 {% endblock %}
