--- a/auctions/templates/auctions/watchlist_list.html
+++ b/auctions/templates/auctions/watchlist_list.html
@@ -7,10 +7,16 @@
 
 <div style="padding: 40px 0 20px 0;">
     <div style="text-align: center;">
+    {% if message %}
+    <div class="title">
+      <h3>{{ message }}</h3>
+    </div>
+    {% else %}
         <h2>Your WatchList</h2>
+
     </div>
     <section class="row" style="margin-left: 5px;">
-        {% for Listing in object_list%}
+        {% for Listing in object_list %}
             <article class="watchlist_card">
                 <a href="{% url 'listingpage' Listing.pk %}">
                      <img class="card-img-top" src="{{ Listing.image  }}" alt="Card image cap">
@@ -21,19 +27,9 @@
                   <p class="card-subtitle mb-2 text-muted" style="font-size: smaller;"> Created {{ Listing.created_at }}</p>
                 </div>
             </article>
-            {% empty %}
-    <li>No item yet.</li>
-    
-    </section>    
+    </section>  
+    {% endfor %}
 </div>  
-   
-
-{% endfor %}
-
-{% else %}
-    <div class="alert alert-danger" role="alert">
-        Not signed in.
-    </div>
 {% endif %}
-        
+{% endif %}
 {% endblock %}
