--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -138,7 +138,16 @@
               <input class="btn btn-primary btn-sm" type="submit" value="Place Bid">
               <a href="{% url 'add_to_wishlist' listing.id %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Watchlist</a>
             </div>
+            {% if messages %}
+            <div class="box arrow-top">
+              {% for message in messages %}
+                      {{ message }}
+              {% endfor %}
+            </div>
+            {% endif %}
         </form> 
+
+
         {% if listing.highest_bid <= listing.desired_price  %}
         <form action="{% url 'cart_add' listing.id %}" method="POST" class="column">
             {% csrf_token %}
