--- a/auctions/templates/auctions/watchlist_list.html
+++ b/auctions/templates/auctions/watchlist_list.html
@@ -24,7 +24,11 @@
                 </a>
                 <div class="card-body" style="padding: 15px;">
                   <p class="card-title"><strong> {{ Listing.title|truncatewords:10}} </strong></p>
-                  <p class="card-subtitle mb-2 "  style="font-size: small;"> Current Price:</strong> {{ Listing.starting_bid }}$</p>
+                  {% if listing.Winner != None %}
+                  <p class="card-subtitle mb-2 "  style="font-size: small;"> Current Price:</strong> ${{ Listing.starting_bid }}</p>
+                  {% else %}
+                  <p class="card-subtitle mb-2 "  style="font-size: small;"> Current Price:</strong> ${{ Listing.highes_bid }}</p>
+                  {% endif %}
                   <p class="card-subtitle mb-2 text-muted" style="font-size: smaller;"> Created {{ Listing.created_at }}</p>
                 </div>
             </article>
