--- a/auctions/templates/auctions/watchlist_list.html
+++ b/auctions/templates/auctions/watchlist_list.html
@@ -27,7 +27,7 @@
                   {% if listing.Winner != None %}
                   <p class="card-subtitle mb-2 "  style="font-size: small;"> Current Price:</strong> ${{ Listing.starting_bid }}</p>
                   {% else %}
-                  <p class="card-subtitle mb-2 "  style="font-size: small;"> Current Price:</strong> ${{ Listing.highes_bid }}</p>
+                  <p class="card-subtitle mb-2 "  style="font-size: small;"> Current Price:</strong> ${{ Listing.highest_bid }}</p>
                   {% endif %}
                   <p class="card-subtitle mb-2 text-muted" style="font-size: smaller;"> Created {{ Listing.created_at }}</p>
                 </div>
