--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -124,18 +124,19 @@
               bid must be greater than the highest bid ${{ listing.highest_bid }}
             </span> 
             <div style="padding: 12px 0 10px 0;" >
-              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ listing.highest_bid }}"  placeholder="{{ listing.highest_bid }}" step="0.01" oninput="setTwoNumberDecimal">              
+              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ min_bid }}"  placeholder="{{ listing.highest_bid }}" step="0.1" oninput="setTwoNumberDecimal">              
             </div> 
             {% elif listing.Winner ==  None %}
             <span  style="color: rgba(75, 84, 94, 0.74);font-size: 12px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> 
               bid must be greater than the highest bid ${{ listing.starting_bid }}
             </span>
             <div style="padding: 12px 0 10px 0;" >
-              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ listing.starting_bid }}"  placeholder="{{ listing.starting_bid }}" step="0.01" oninput="setTwoNumberDecimal">           </div>
+              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ min_starting_bid }}"  placeholder="{{ listing.starting_bid }}" step="0.1" oninput="setTwoNumberDecimal"> </div>
             {% endif %}
           
             <div >  
               <input class="btn btn-primary btn-sm" type="submit" value="Place Bid">
+
               <a href="{% url 'add_to_wishlist' listing.id %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Watchlist</a>
             </div>
             {% if messages %}
