--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -23,7 +23,7 @@
           <hr>
 
               <p class="card-text"> <strong>Starting Bid:</strong> ${{ listing.starting_bid }}</p>
-              <p class="card-text"> <strong>Current highest bid:</strong> ${{ listing.highest_bid }}</p>
+              <p class="card-text"> <strong>Current price:</strong> ${{ listing.highest_bid }}</p>
               <p class="card-text"> <strong>Bidder:</strong> <code>@{{ listing.Winner }}</code></p>
 
           <div >
@@ -106,9 +106,9 @@
               <h4 style="padding-bottom: 20px;font-size: x-large;" class="card-title"> {{ listing.title }}</h4>
               <div class="card-text">Seller: <code>@{{ listing.seller }}</code> </div>
               {% if listing.Winner !=  None %}
-                  <div class="card-text">Highest bid:<strong>  ${{ listing.highest_bid }}</strong></div> 
+                  <div class="card-text">Current price:<strong>  ${{ listing.highest_bid }}</strong></div> 
               {% elif listing.Winner ==  None %}
-                  <div class="card-text">Highest bid:<strong>  ${{ listing.starting_bid }}</strong></div> 
+                  <div class="card-text">Current price:<strong>  ${{ listing.starting_bid }}</strong></div> 
               {% endif %}
 
         </div>
@@ -124,21 +124,22 @@
               bid must be greater than the highest bid ${{ listing.highest_bid }}
             </span> 
             <div style="padding: 12px 0 10px 0;" >
-              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ min_bid }}"  placeholder="{{ listing.highest_bid }}" step=".1" oninput="setTwoNumberDecimal">              
+              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ min_bid }}"  placeholder="{{ listing.highest_bid }}" value="{{ listing.highest_bid }}" step=".1" oninput="setTwoNumberDecimal">              
             </div> 
             {% elif listing.Winner ==  None %}
             <span  style="color: rgba(75, 84, 94, 0.74);font-size: 12px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> 
               bid must be greater than the highest bid ${{ listing.starting_bid }}
             </span>
             <div style="padding: 12px 0 10px 0;" >
-              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ min_starting_bid }}"  placeholder="{{ listing.starting_bid }}" step=".1" oninput="setTwoNumberDecimal"> </div>
+              <input style="width: 100%;padding: 5px;" class="form-control form-control-sm" type="number" name="amount" min="{{ min_starting_bid }}"  placeholder="{{ listing.starting_bid }}" value="{{ listing.starting_bid }}" step=".1" oninput="setTwoNumberDecimal"> </div>
             {% endif %}
-          
-            <div >  
-              <input class="btn btn-primary btn-sm" type="submit" value="Place Bid">
 
+            <input class="btn btn-primary btn-sm" type="submit" value="Place Bid">
+            
+            <span>  
               <a href="{% url 'add_to_wishlist' listing.id %}" type="submit" role="button" class="btn btn-primary btn-sm">Add to Watchlist</a>
-            </div>
+            </span>
+
             {% if messages %}
             <div class="box arrow-top">
               {% for message in messages %}
@@ -224,9 +225,9 @@
               <h4 style="padding-bottom: 20px;font-size: x-large;" class="card-title"> {{ listing.title }}</h4>
               <div class="card-text">Seller: <code>@{{ listing.seller }}</code> </div>
               {% if listing.Winner !=  None %}
-                  <div class="card-text">Highest bid:<strong>  ${{ listing.highest_bid }}</strong></div> 
+                  <div class="card-text">Current price:<strong>  ${{ listing.highest_bid }}</strong></div> 
               {% elif listing.Winner ==  None %}
-                  <div class="card-text">Highest bid:<strong>  ${{ listing.starting_bid }}</strong></div> 
+                  <div class="card-text">Current price:<strong>  ${{ listing.starting_bid }}</strong></div> 
               {% endif %}
 
         </div>
