--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="col-md-8">
             <div class="card-header justify-content-between">
-                 <div style="font-size: 16px;">Author: <code>@{{ listing.seller }}</code></div>
+                 <div style="font-size: 16px;">Seller: <code>@{{ listing.seller }}</code></div>
                 {% if listing.active %}
                     <span class="badge badge-success" style="font-size: 13px;">Open</span>
                 {% else %}
