--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -56,8 +56,8 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'Winlist' %}">Winlist
-                        {% if count != 0 %}
-                            <span class="badge badge-secondary">{{ count }}</span>
+                        {% if win_count != 0 %}
+                            <span class="badge badge-secondary">{{ win_count }}</span>
                         {% endif %}
                     </a>
                 </li>
